# cunqa

./: .buildinfo  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CNAME  README.html  README.md  configure.sh  copied_and_processed_README.html  cunqa.backend.Backend.html  cunqa.backend.BackendData.html  cunqa.backend.html  cunqa.circuit.ControlContext.html  cunqa.circuit.CunqaCircuit.html  cunqa.circuit.CunqaCircuitError.html  cunqa.circuit.circuit.ControlContext.html  cunqa.circuit.circuit.CunqaCircuit.html  cunqa.circuit.circuit.CunqaCircuitError.html  cunqa.circuit.circuit.InstanceTrackerMeta.html  cunqa.circuit.circuit.get_module.html  cunqa.circuit.circuit.html  cunqa.circuit.circuit.transitive_combinations.html  cunqa.circuit.circuit_extensions.HorizontalDivisionError.html  cunqa.circuit.circuit_extensions.cunqa_dunder_methods.html  cunqa.circuit.circuit_extensions.distr_ccx_ccz_cswap.html  cunqa.circuit.circuit_extensions.distr_rzz_rxx_ryy_rzx.html  cunqa.circuit.circuit_extensions.html  cunqa.circuit.converters.ConvertersError.html  cunqa.circuit.converters.WIP_json_to_qasm.html  cunqa.circuit.converters.WIP_qasm_to_json.html  cunqa.circuit.converters.convert.html  cunqa.circuit.converters.cunqac_to_json.html  cunqa.circuit.converters.cunqac_to_qc.html  cunqa.circuit.converters.get_module.html  cunqa.circuit.converters.html  cunqa.circuit.html  cunqa.circuit.parameter.Variable.html  cunqa.circuit.parameter.html  cunqa.circuit.parameter.variables.html  (+55 more)
cpptests/: CMakeLists.txt  example_test.cpp  test_quantum_task.cpp
cunqa/: CMakeLists.txt  __init__.py  backend.py  bindings.cpp  circuit.py  circuit_extensions.py  client_bindings.cpp  constants.py.in  converters.py  intermediary.py  json_bindings.cpp  logger.py  mappers.py  netqmpi_adapter.py  probabilities.py  qjob.py  qmio_helpers.py  qpu.py  qpu_api.py  qutils.py  result.py  setup_qmio_server.py  transpile.py
cunqa/circuit/: CMakeLists.txt  __init__.py  circuit.py  circuit_extensions.py  converters.py  core.py  cut_impl.py  ir.py  parameter.py  partitioning.py  transformations.py
cunqa/json_schema/: calibrations_schema.json  config_file_schema.json  json_validator.py
cunqa/noise_model/: cunqabackend.py  fakeqmio.py  noise_instructions.py
cunqa/noise_model/json_schema/: backend_schema.json  calibrations_schema.json
cunqa/qiskit_deps/: CMakeLists.txt  converter.py  cunqabackend.py  noise_instructions.py  transpiler.py
cunqa/real_qpus/: CMakeLists.txt  __init__.py  qmio_linker.py  qmio_linker.py.in  qmioclient.py
examples/cpp/: CMakeLists.txt  cunqa_executor_example.cpp  example1.cpp  example2.cpp  example3.cpp  munich_adapter_example.cpp  qc_example.cpp  simplest_example.cpp
python/: CMakeLists.txt  big_circuit.py  bindings.cpp  circuit.py  cluster.py  initialize.py  qjob.py  qpu.py  translator.py
src/: CMakeLists.txt  operations.hpp  qpu.cpp  qpu.hpp  quantum_task.cpp  quantum_task.hpp
src/backends/: cc_backend.hpp  qc_backend.hpp  simple_backend.hpp
src/backends/simulators/: CMakeLists.txt
src/backends/simulators/AER/: CMakeLists.txt  aer_cc_simulator.cpp  aer_cc_simulator.hpp  aer_executor.cpp  aer_executor.hpp  aer_helpers.hpp  aer_qc_simulator.cpp  aer_qc_simulator.hpp  aer_simple_simulator.cpp  aer_simple_simulator.hpp
src/backends/simulators/CUNQA/: CMakeLists.txt  cunqa_cc_simulator.cpp  cunqa_executor.cpp  cunqa_executor.hpp  cunqa_qc_simulator.cpp  cunqa_qc_simulator.hpp  cunqa_simple_simulator.cpp  cunqa_simple_simulator.hpp
src/backends/simulators/Maestro/: CMakeLists.txt  maestro_cc_simulator.cpp  maestro_cc_simulator.hpp  maestro_executor.cpp  maestro_executor.hpp  maestro_qc_simulator.cpp  maestro_qc_simulator.hpp  maestro_simple_simulator.cpp  maestro_simple_simulator.hpp
src/backends/simulators/Munich/: munich_cc_simulator.cpp  munich_cc_simulator.hpp  munich_executor.cpp  munich_executor.hpp  munich_helpers.hpp  munich_qc_simulator.cpp  munich_qc_simulator.hpp  munich_simple_simulator.cpp
src/backends/simulators/Qsim/: CMakeLists.txt  qsim_cc_simulator.cpp  qsim_cc_simulator.hpp  qsim_executor.cpp  qsim_executor.hpp  qsim_qc_simulator.cpp  qsim_qc_simulator.hpp  qsim_simple_simulator.cpp  qsim_simple_simulator.hpp
src/backends/simulators/QuEST/: CMakeLists.txt  quest_cc_simulator.cpp  quest_cc_simulator.hpp  quest_executor.cpp  quest_executor.hpp  quest_qc_simulator.cpp  quest_qc_simulator.hpp  quest_simple_simulator.cpp  quest_simple_simulator.hpp
src/backends/simulators/Qulacs/: CMakeLists.txt  qulacs_executor.cpp  (+8 more)
src/classical_channel/: classical_channel.hpp
src/cli/: CMakeLists.txt  cunqa_jq.cpp  epilog.sh  epilog.sh.in  erase_key.cpp  jq.cpp  qdrop.cpp  qinfo.cpp  qraise.cpp  setup_executor.cpp  setup_qmio.cpp  setup_qpus.cpp
src/cli/noise_model/: noise_instructions.py
src/cli/qraise/: args_qraise.hpp  cc_conf_qraise.hpp  infrastructure_conf_qraise.hpp  noise_model_conf_qraise.hpp  qc_conf_qraise.hpp  qmio_conf_qraise.hpp  simple_conf_qraise.hpp  utils_qraise.hpp
src/comm/: CMakeLists.txt  classical_channel.hpp  client.hpp  server.hpp
src/quantum_task/: CMakeLists.txt  circuit.hpp  quantum_task.hpp  run_config.hpp
src/sim/: CMakeLists.txt  backend.hpp  simulator.hpp
src/sim/classical_comm/: CMakeLists.txt  cc_backend.hpp  cc_executor.cpp  cc_executor.hpp
src/sim/no_comm/: CMakeLists.txt  nc_backend.hpp  nc_executor.cpp  nc_executor.hpp
src/sim/quantum_comm/: CMakeLists.txt  qc_backend.hpp  qc_executor.cpp  qc_executor.hpp
src/sim/simulators/: CMakeLists.txt  simulator_factory.cpp  simulator_factory.hpp
src/utils/: CMakeLists.txt  analysing_data.py  bin_circuit.txt  constants.hpp  constants.hpp.in  example_bin.cpp  helpers.hpp  json.cpp  json.hpp  test.cpp
src/utils/helpers/: basis_gates.hpp  from_json_to_binary.hpp  json_to_qasm2.hpp  net_functions.hpp  qasm2_to_json.hpp  reverse_bitstring.hpp
src/utils/logger/: CMakeLists.txt  logger.hpp  logger_client.cpp  logger_executor.cpp  logger_qpu.cpp
src/utils/probabilities/: process_counts.hpp
src/utils/qraise/: args_qraise.hpp  fakeqmio_conf_qraise.hpp  noise_model_conf_qraise.hpp
(+690 files in other folders)
